--- a/style.css
+++ b/style.css
@@ -113,6 +113,7 @@ font-style: normal;
 font-weight: 700;
 line-height: 80px; /* 133.333% */
 margin: 0.5em 0;
+width: 60%;
 }
 
 .section1 .hero-p{
@@ -624,6 +625,10 @@ line-height: 24px; /* 150% */
     width: 80%;
 }
 
+.section1 .hero-title{
+    width: 80%;
+}
+
 .section2 .card-section{
     grid-template-columns: repeat(auto-fit, minmax(18rem));
     margin-left: -6em;
@@ -676,6 +681,10 @@ width: 100%;
 height: 500px;
 border-radius: 50%;
 margin-top: 8.5em;
+}
+
+.section1 .hero-title{
+    width: 80%;
 }
 
 .section1 .text{
@@ -758,6 +767,7 @@ margin-top: 8em;
 font-size: 50px;
 margin: 0;
 margin-top: 1em;
+width: 80%;
 }
 
 .section1 .hero-p{
@@ -902,6 +912,7 @@ display: block;
     .section1 .hero-title{
     font-size: 3rem;
     margin-top: 1em;
+    width: 100%;
     }
     
     .section1 .hero-p{
@@ -1042,6 +1053,7 @@ display: block;
     margin: 0;
     margin-top: 0em;
     line-height: 73px;
+    width: 100%;
     }
     
     .section1 .hero-p{
