--- a/style.css
+++ b/style.css
@@ -567,6 +567,10 @@ margin-bottom: 0.3em;
     margin-top: 1em;
 }
 
+.footer .foot-2 li:hover{
+    text-decoration: underline;
+}
+
 .footer a{
     text-decoration: none;
     color: var(--grey-1, #333);
@@ -597,7 +601,7 @@ line-height: 24px; /* 150% */
 }
 
 .footer .social i:hover{
-    color: #000000;
+    color: #128C76;
 }
 
 
